--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -451,7 +451,7 @@ section {
 .spline-card {
   width: 400px;
   height: 400px;
-  background: rgba(0, 0, 0, 0.96);
+  box-shadow: inset 0 0 20px #67676740;
   position: relative;
   overflow: hidden;
   border-radius: 30px;
@@ -551,6 +551,17 @@ section {
 
 .work-card:hover .work-img {
   transform: scale(1.1);
+}
+
+.work-spline-container {
+  width: 100%;
+  height: 100%;
+  background: var(--bg-secondary);
+}
+
+.work-spline {
+  width: 100%;
+  height: 100%;
 }
 
 .work-content {
